// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AnkiBlocks Snapshot Tests > AnkiCloze > matches snapshot with custom cloze number 1`] = `
<div>
  <span
    class="anki-cloze"
    data-cloze="3"
    data-field="Text"
    title="Cloze Deletion: {{cloze:Text}}"
  >
    <code
      class="anki-syntax"
    >
      {{cloze:Text}}
    </code>
  </span>
</div>
`;

exports[`AnkiBlocks Snapshot Tests > AnkiCloze > matches snapshot with default props 1`] = `
<div>
  <span
    class="anki-cloze"
    data-cloze="1"
    data-field="Text"
    title="Cloze Deletion: {{cloze:Text}}"
  >
    <code
      class="anki-syntax"
    >
      {{cloze:Text}}
    </code>
  </span>
</div>
`;

exports[`AnkiBlocks Snapshot Tests > AnkiConditional > matches snapshot with custom field name 1`] = `
<div>
  <div
    class="anki-conditional"
    data-field="Extra"
    title="Conditional: {{#Extra}}...{{/Extra}}"
  >
    <div
      class="anki-conditional-label"
    >
      <code
        class="anki-syntax"
      >
        {{#Extra}}
      </code>
    </div>
    <div
      class="anki-conditional-content"
    >
      <div>
        Show when Extra exists
      </div>
    </div>
    <div
      class="anki-conditional-label"
    >
      <code
        class="anki-syntax"
      >
        {{/Extra}}
      </code>
    </div>
  </div>
</div>
`;

exports[`AnkiBlocks Snapshot Tests > AnkiConditional > matches snapshot with default props 1`] = `
<div>
  <div
    class="anki-conditional"
    data-field="Field"
    title="Conditional: {{#Field}}...{{/Field}}"
  >
    <div
      class="anki-conditional-label"
    >
      <code
        class="anki-syntax"
      >
        {{#Field}}
      </code>
    </div>
    <div
      class="anki-conditional-content"
    >
      <div>
        Conditional Content
      </div>
    </div>
    <div
      class="anki-conditional-label"
    >
      <code
        class="anki-syntax"
      >
        {{/Field}}
      </code>
    </div>
  </div>
</div>
`;

exports[`AnkiBlocks Snapshot Tests > AnkiConditional > matches snapshot with negated condition 1`] = `
<div>
  <div
    class="anki-conditional"
    data-field="Front"
    title="Conditional: {{#Front}}...{{/Front}}"
  >
    <div
      class="anki-conditional-label"
    >
      <code
        class="anki-syntax"
      >
        {{#Front}}
      </code>
    </div>
    <div
      class="anki-conditional-content"
    >
      <div>
        Show when Front is empty
      </div>
    </div>
    <div
      class="anki-conditional-label"
    >
      <code
        class="anki-syntax"
      >
        {{/Front}}
      </code>
    </div>
  </div>
</div>
`;

exports[`AnkiBlocks Snapshot Tests > AnkiField > matches snapshot with custom field name 1`] = `
<div>
  <div
    class="anki-field"
    data-field="Front"
    title="Anki Field: Front"
  >
    <code
      class="anki-syntax"
    >
      {{Front}}
    </code>
  </div>
</div>
`;

exports[`AnkiBlocks Snapshot Tests > AnkiField > matches snapshot with default props 1`] = `
<div>
  <div
    class="anki-field"
    data-field="Field"
    title="Anki Field: Field"
  >
    <code
      class="anki-syntax"
    >
      {{Field}}
    </code>
  </div>
</div>
`;

exports[`AnkiBlocks Snapshot Tests > AnkiField > matches snapshot with fallback text 1`] = `
<div>
  <div
    class="anki-field"
    data-field="Extra"
    title="Anki Field: Extra"
  >
    <code
      class="anki-syntax"
    >
      {{Extra}}
    </code>
    <span
      class="anki-fallback"
    >
      (No extra content)
    </span>
  </div>
</div>
`;
